# gb_manipulation

./: CMakeLists.txt  README.md  package.xml
behavior_trees_xml/: pick.xml  place.xml
config/: params.yaml
include/gb_manipulation/behavior_tree_nodes/: Pick.hpp  Place.hpp  PlaceSimple.hpp
launch/: gb_manipulation_launch.py
pddl/: domain.pddl
src/: dummy_controller_node.cpp
src/behavior_tree_nodes/: Pick.cpp  Place.cpp  PlaceSimple.cpp
src/utils/: worldtf_to_map.cpp
